updated code so that it is compatible with Java 11